--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,32 +12,32 @@ env:
   AWS_TF_STATE_BUCKET_NAME: ${{ secrets.AWS_TF_STATE_BUCKET_NAME }}
   AWS_REGION: us-east-1
 
-jobs:
-  deploy-infra:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_wrapper: false
-      - name: Terraform init
-        id: init
-        run: terraform init -backend-config="bucket=$AWS_TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
-        working-directory: ./terraform
-      - name: Terraform Plan
-        id: plan
-        run: |-
-          terraform plan \
-          -var="region=us-east-1" \
-          -var="public_key=$AWS_SSH_KEY_PUBLIC" \
-          -var="private_key=$AWS_SSH_KEY_PRIVATE_" \
-          -var="key_name=deployer-key" \
-          -out=PLAN
-        working-directory: ./terraform
-      - name: Terraform Apply
-        id: apply
-        run: terraform apply PLAN
+# jobs:
+#   deploy-infra:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: setup Terraform
+#         uses: hashicorp/setup-terraform@v1
+#         with:
+#           terraform_wrapper: false
+#       - name: Terraform init
+#         id: init
+#         run: terraform init -backend-config="bucket=$AWS_TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
+#         working-directory: ./terraform
+#       - name: Terraform Plan
+#         id: plan
+#         run: |-
+#           terraform plan \
+#           -var="region=us-east-1" \
+#           -var="public_key=$AWS_SSH_KEY_PUBLIC" \
+#           -var="private_key=$AWS_SSH_KEY_PRIVATE_" \
+#           -var="key_name=deployer-key" \
+#           -out=PLAN
+#         working-directory: ./terraform
+#       - name: Terraform Apply
+#         id: apply
+#         run: terraform apply PLAN
         
-        working-directory: ./terraform
+#         working-directory: ./terraform
