--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,9 +12,9 @@ env:
   AWS_TF_STATE_BUCKET_NAME: ${{ secrets.AWS_TF_STATE_BUCKET_NAME }}
   AWS_REGION: us-east-1
 
-# jobs:
-#   deploy-infra:
-#     runs-on: ubuntu-latest
+jobs:
+  deploy-infra:
+    runs-on: ubuntu-latest
 #     steps:
 #       - name: Checkout
 #         uses: actions/checkout@v2
