--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ env:
 jobs:
   deploy-infra:
     runs-on: ubuntu-latest
-#     steps:
+    steps:
         - name: Checkout
           uses: actions/checkout@v2
         - name: setup Terraform
