--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,10 @@ jobs:
   deploy-infra:
     runs-on: ubuntu-latest
     steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-#         - name: setup Terraform
-#           uses: hashicorp/setup-terraform@v1
+#         - name: Checkout
+#           uses: actions/checkout@v2
+        - name: setup Terraform
+          uses: hashicorp/setup-terraform@v1
 #           with:
 #             terraform_wrapper: false
 #         - name: Terraform init
